--- a/westernunion.htm
+++ b/westernunion.htm
@@ -199,7 +199,7 @@ document.getElementsByClassName("tablink")[0].click();
               ' "type": "link" ' +
               ' }, ' +
 
-            
+
           '{' +
             ' "text": "PagerDuty Postmortem", ' +
             ' "href": "https://pdt-huggins.pagerduty.com/postmortems/15b29bd8-81ce-48dc-8104-31117484df88", ' +
@@ -212,10 +212,10 @@ document.getElementsByClassName("tablink")[0].click();
           ' } ' +
           ' ], ' +
         ' "details": { ' +
-          ' "body": "[Critical] Unexpected server response detected on the Western UnionCore Service, High Error rates <br/> Object Reference Not Set and ADO.NET Connection pool exceeded errors detected" , ' +
+          ' "body": "[Critical] unexpected server response detected on the Western UnionCore Service, High Error rates <br/> Object Reference Not Set and ADO.NET Connection pool exceeded errors detected" , ' +
           ' "Order Value": ' + orderValue + ', ' +
           ' "priority": "High", ' +
-          ' "title": "[Critical] Unexpected server response detected on the Western Union Core Service, High Error rates", ' +
+          ' "title": "[Critical] unexpected server response detected on the Western Union Core Service, High Error rates", ' +
           ' "event_id": "8125363154448140714", ' +
           ' "tags": "aws-prod, base, env:prod, host:farnsworth, monitor, pd_az:us-west-2c, production, xdb, xtradb", ' +
           ' "Customer": "'+ customerName + '" ' +
@@ -341,10 +341,10 @@ document.getElementsByClassName("tablink")[0].click();
           ' } ' +
           ' ], ' +
         ' "details": { ' +
-          ' "body": "[Major] Unexpected database response detected on the Western Union Core Service, High Error rates <br/> Object Reference Not Set and ADO.NET Connection pool exceeded errors detected" , ' +
+          ' "body": "[Major] unexpected database response detected on the Western Union Core Service, High Error rates <br/> Object Reference Not Set and ADO.NET Connection pool exceeded errors detected" , ' +
           ' "Order Value": ' + orderValue + ', ' +
           ' "priority": "High", ' +
-          ' "title": "[Major] Unexpected database response detected on the Western Union Core Service, High Error rates", ' +
+          ' "title": "[Major] unexpected database response detected on the Western Union Core Service, High Error rates", ' +
           ' "event_id": "8125363154448140714", ' +
           ' "tags": "aws-prod, base, env:prod, host:farnsworth, monitor, pd_az:us-west-2c, production, xdb, xtradb", ' +
           ' "Customer": "'+ customerName + '" ' +
