--- a/aa.htm
+++ b/aa.htm
@@ -254,7 +254,7 @@ document.getElementsByClassName("tablink")[0].click();
 //                       // alert( "Hello: " + msg );
 //                    });
 
-          alert('Error connecting to Apollo Gaming Core Services.')
+          alert('Error connecting to AA Core Services.')
           return false;
 
         }
@@ -401,7 +401,7 @@ document.getElementsByClassName("tablink")[0].click();
              // alert( "Hello: " + msg );
           });
 
-          alert('Error joining matchmaking server. Please call the Support Desk on +1817-440-3544')
+          alert('Error. Please call the AAdvatage Support Desk on +1817-440-3544')
           return false;
 
 
