--- a/toyota.htm
+++ b/toyota.htm
@@ -379,7 +379,7 @@ document.getElementsByClassName("tablink")[0].click();
 
 			//Test to trigger 2nd Incident
 
-		  //end of added test
+		  //end of added test ...
         }
         </script>
 
