--- a/toyota_trigger/toyota_triggers.html
+++ b/toyota_trigger/toyota_triggers.html
@@ -16,7 +16,7 @@
 <li><a href="javascript:secondCruxEvent()">Nagios Packet Loss</a></li>
 <li><a href="javascript:thirdCruxEvent()">Nagios CPU </a></li>
 <li><a href="javascript:forthCruxEvent()">BGP Peer Connection</a></li>
-<li><a href="javascript:fifthCruxEvent()">To be Configured</a></li>
+<li><a href="javascript:fifthCruxEvent()">SCOM Agent Service</a></li>
 <li><a href="javascript:sixthCruxEvent()">To be Configured</a></li>
 <li><a href="javascript:seventhCruxEvent()">To be Configured</a></li>
 <li><a href="javascript:eigthCruxEvent()">To be Configured</a></li>
@@ -93,7 +93,7 @@
         function fithCruxEvent() {
           $.ajax({
                 method: "GET",
-                url: "https://event-sender.herokuapp.com/ondemand/",
+                url: "https://event-sender.herokuapp.com/ondemand/bcd64cba-4ce8-4883-8344-9ac5778d1e12",
                    success:function(resp){}
                  })
                  .done(function( msg ) {
@@ -108,7 +108,7 @@
         function sixthCruxEvent() {
           $.ajax({
                 method: "GET",
-                url: "https://event-sender.herokuapp.com/ondemand/d381daa7-a7d6-432c-9ce6-a7522ad4b3bf",
+                url: "https://event-sender.herokuapp.com/ondemand/",
                    success:function(resp){}
                  })
                  .done(function( msg ) {
