--- a/toyota_trigger/toyota_triggers.html
+++ b/toyota_trigger/toyota_triggers.html
@@ -90,7 +90,7 @@
 
 
 <script>
-        function fithCruxEvent() {
+        function fifthCruxEvent() {
           $.ajax({
                 method: "GET",
                 url: "https://event-sender.herokuapp.com/ondemand/bcd64cba-4ce8-4883-8344-9ac5778d1e12",
