--- a/toyota_trigger/toyota_triggers.html
+++ b/toyota_trigger/toyota_triggers.html
@@ -212,7 +212,7 @@
         }
         </script>
         <script>
-        function twelfthCruxEvent() {
+        function thirteenthCruxEvent() {
           $.ajax({
                 method: "GET",
                 url: "https://event-sender.herokuapp.com/ondemand/7f465d39-3513-4e43-95dc-9de7dc89451e",
